# VOC

./: CMakeLists.txt  main.cpp
file-handling/: FileReader.cpp  FileReader.h
tokenizer/: Token.cpp  Token.h  TokenGenerator.cpp  TokenGenerator.h  TokenTypes.h
tokenizer/getallen/: Getal.cpp  Getal.h  GetallenChecker.cpp  GetallenChecker.h
voc-scripts/: file1.voc
